feat: add endpoints for typical warehousing events
